# sfntly

./: .gitignore  README.md
adv_layout/data/testdata/: wiki_words_hb_closure.py
adv_layout/data/testdata/wiki_words/: af  ar  bg  bn  bo  cs  de  dv  el  en  es  fr  he  hi  hy  is  it  ka  ko  lt  lv  mr  no  pl  ro  sr  sw  te  th  tr  uk  ur  vi  zh
branches/cibu/adv_layout/data/testdata/: wiki_words_truncate.py  (+1 more)
branches/stuartg/build_reorg/java/: javadoc.xml
build_reorg/java/: .classpath
cpp/: CMakeLists.txt
cpp/data/ext/: copy_fonts.bat
cpp/ext/: README-sfntly.txt
cpp/src/sample/chromium/: subsetter_impl.cc
cpp/src/sample/subsetter/: subset_util.cc  subset_util.h
cpp/src/sample/subtly/: character_predicate.cc  utils.cc
cpp/src/sfntly/: cmap_table.cc  cmap_table.h  font.cc  font.h  font_data_table.cc  font_data_table.h  font_data_table_builder_container.h  font_factory.cc  font_factory.h  font_header_table.cc  font_header_table.h  glyph_table.cc  glyph_table.h  horizontal_header_table.cc  horizontal_header_table.h  horizontal_metrics_table.cc  horizontal_metrics_table.h  loca_table.cc  loca_table.h  maximum_profile_table.h  name_table.cc  name_table.h  os2_table.cc  os2_table.h  subtable.h  table.cc  table.h  tag.cc  tag.h
cpp/src/sfntly/data/: byte_array.cc  byte_array.h  font_input_stream.cc  font_input_stream.h  font_output_stream.cc  font_output_stream.h  growable_memory_byte_array.cc  growable_memory_byte_array.h  memory_byte_array.cc  memory_byte_array.h  readable_font_data.cc  readable_font_data.h  writable_font_data.cc  writable_font_data.h
cpp/src/sfntly/math/: fixed1616.h  font_math.h
cpp/src/sfntly/port/: atomic.h  config.h  endian.h  exception_type.h  file_input_stream.cc  file_input_stream.h  input_stream.h  java_iterator.h  memory_input_stream.cc  memory_input_stream.h  memory_output_stream.cc  memory_output_stream.h  refcount.h  type.h
cpp/src/sfntly/table/: byte_array_table_builder.cc  font_data_table.cc  font_data_table.h  subtable.h  table.cc  table.h  table_based_table_builder.cc  table_based_table_builder.h
cpp/src/sfntly/table/bitmap/: big_glyph_metrics.cc  big_glyph_metrics.h  bitmap_glyph.cc  bitmap_size_table.cc  bitmap_size_table.h  composite_bitmap_glyph.cc  composite_bitmap_glyph.h  ebdt_table.cc  ebdt_table.h  eblc_table.cc  eblc_table.h  index_sub_table.cc  index_sub_table.h  index_sub_table_format1.cc  index_sub_table_format1.h  index_sub_table_format2.cc  index_sub_table_format2.h  index_sub_table_format3.cc  index_sub_table_format3.h  index_sub_table_format4.h  index_sub_table_format5.cc  index_sub_table_format5.h  simple_bitmap_glyph.cc
cpp/src/sfntly/table/core/: cmap_table.cc  cmap_table.h  font_header_table.cc  horizontal_device_metrics_table.cc  horizontal_header_table.cc  horizontal_header_table.h  horizontal_metrics_table.cc  horizontal_metrics_table.h  name_table.cc  name_table.h  os2_table.cc  os2_table.h
cpp/src/sfntly/table/truetype/: glyph_table.cc  glyph_table.h  loca_table.cc  loca_table.h
cpp/src/sfntly/tools/: subsetter.cc
cpp/src/sfntly/tools/subsetter/: glyph_table_subsetter.cc  glyph_table_subsetter.h  subsetter.cc  subsetter.h  table_subsetter_impl.h
cpp/src/test/: bitmap_table_test.cc  byte_array_test.cc  cmap_editing_test.cc  cmap_test.cc  endian_test.cc  endian_test.h  file_io_test.cc  font_data_test.cc  font_data_test.h  font_parsing_test.cc  font_parsing_test.h  font_subsetter.cc  main.cc  name_editing_test.cc  open_type_data_test.cc  open_type_data_test.h  otf_basic_editing_test.cc  otf_basic_editing_test.h  serialization_test.cc  serialization_test.h  smart_pointer_test.cc  smart_pointer_test.h  subsetter_impl.cc  test_data.cc  test_data.h  test_font_utils.cc  test_font_utils.h  test_utils.cc  test_utils.h  test_utils_test.cc  test_utils_test.h  verify_glyf.cc  verify_hhea.cc  verify_hmtx.cc  verify_loca.cc  verify_maxp.cc  verify_name.cc  verify_os2.cc
cpp/src/test/autogenerated/: cmap_basic_test.cc
cpp/tools/: cmap_data_generator_cc.py  font_data_generator_cc.py  generate_cmap_data_cc.py  test_data_generator_cc.py
cpp/vc/: sfntly.vcproj  sfntly.vcxproj  sfntly.vcxproj.filters  subsetter.vcproj  subsetter.vcxproj  unit_test.vcproj  unit_test.vcxproj  unit_test.vcxproj.filters
java/: .classpath  pom.xml
trunk/cpp/: CMakeLists.txt  README.txt  sfntly.vc10.sln  sfntly.vc9.sln
trunk/cpp/data/ext/: README.txt
trunk/cpp/ext/: README-sfntly.txt
trunk/cpp/src/sfntly/: cmap_table.cc  cmap_table.h  font.cc  font.h  font_data_table.cc  font_data_table.h  font_data_table_builder_container.h  font_factory.cc  font_factory.h  font_header_table.cc  font_header_table.h  glyph_table.cc  horizontal_header_table.cc  horizontal_header_table.h  horizontal_metrics_table.cc  horizontal_metrics_table.h  loca_table.cc  maximum_profile_table.cc  maximum_profile_table.h  name_table.cc  name_table.h  os2_table.cc  os2_table.h  subtable.cc  table.cc  table.h  tag.h
trunk/cpp/src/test/: byte_array_test.cc  byte_array_test.h  chrome_subsetter.cc  cmap_test.cc  endian_test.cc  endian_test.h  file_io_test.cc  file_io_test.h  font_data_test.cc  font_data_test.h  font_parsing_test.cc  font_subsetter.h  main.cc  name_editing_test.cc  name_editing_test.h  otf_basic_editing_test.cc  otf_basic_editing_test.h  serialization_test.cc  smart_pointer_test.cc  smart_pointer_test.h  subsetter_impl.cc  subsetter_impl.h  test_data.cc  test_data.h  test_font_utils.cc  test_font_utils.h  test_utils_test.cc  test_utils_test.h  verify_glyf.cc  verify_hhea.cc  verify_hmtx.cc  verify_loca.cc  verify_name.cc  verify_os2.cc
trunk/cpp/tools/: README-test_data.txt  cmap_data_generator_cc.py  table_data_generator_cc.py
trunk/cpp/vc/: sfntly.vcproj  sfntly.vcxproj  subsetter.vcproj  subsetter.vcxproj.filters  unit_test.vcproj  unit_test.vcxproj  unit_test.vcxproj.filters
trunk/java/: build.properties  build.xml  common.xml
wiki/: CREDITS.wiki  CodeReviews.wiki  MicroTypeExpress.wiki  SfntlyCPlusPlusNotes.wiki  Useful_links.wiki  build_cpp.wiki  cpp_porting_guidelines.wiki  smart_pointer_usage.wiki  unit_tests.wiki
(+12203 files in other folders)
